localstack-deployment.yaml
# Caminho: k8s/infra/localstack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:3.4.0
          imagePullPolicy: Always
          ports:
            - containerPort: 4566
