status-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-service
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: status-service
  template:
    metadata:
      labels:
        app: status-service
    spec:
      containers:
        - name: status-service
          image: willcsilva/status-service:latest
          ports:
            - containerPort: 3005
