localstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack
  namespace: infra
spec:
  selector:
    app: localstack
  ports:
    - port: 4566
      targetPort: 4566
